feature: add header component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,9 @@
 @import "vendors";
+@import "fonts";
+@import "variables";
+@import "base";
+@import "container";
+@import "header";
+@import "menu";
+@import "btn";
+@import "slider";
