--- a/src/styles/vendors.scss
+++ b/src/styles/vendors.scss
@@ -1,1 +1,3 @@
 @import "~normalize.css/normalize.css";
+@import "~slick-carousel/slick/slick-theme.css";
+@import "~slick-carousel/slick/slick.css";
