feature: add features component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,8 @@
 @import "menu";
 @import "btn";
 @import "slider";
+@import "features";
+@import "title";
+@import "description";
+@import "feature-block";
+@import "link";
