feature: add footer component

--- a/src/styles/feature-block.scss
+++ b/src/styles/feature-block.scss
@@ -30,7 +30,7 @@
   &__title {
     font-size: 24px;
     line-height: 31px;
-    color: $color-light;
+    color: $color-bold;
     font-family: $medium-f;
   }
   &__description {
