--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "base";
 @import "container";
 @import "header";
+@import "logo";
 @import "menu";
 @import "btn";
 @import "slider";
@@ -13,3 +14,4 @@
 @import "feature-block";
 @import "link";
 @import "propose";
+@import "footer";
