--- a/src/styles/vendors.scss
+++ b/src/styles/vendors.scss
@@ -1,3 +1,4 @@
 @import "~normalize.css/normalize.css";
 @import "~slick-carousel/slick/slick-theme.css";
 @import "~slick-carousel/slick/slick.css";
+@import "~@fortawesome/fontawesome-free/css/all.css";
