--- a/src/styles/features.scss
+++ b/src/styles/features.scss
@@ -13,6 +13,6 @@
     margin-top: 70px;
     display: flex;
     flex-wrap: wrap;
-    margin: 0 -25px;
+    justify-content: space-between;
   }
 }
