--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,10 @@
 @import "variables";
 @import "base";
 @import "container";
+@import "overlay";
+@import "modal";
+@import "form";
+@import "error";
 @import "header";
 @import "logo";
 @import "menu";
@@ -13,5 +17,6 @@
 @import "description";
 @import "feature-block";
 @import "link";
+@import "underline";
 @import "propose";
 @import "footer";
