--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -7,7 +7,6 @@
     margin-right: 40px;
     line-height: 26px;
     transition: all 0.3s linear;
-
     &:hover {
       .menu__link {
         color: $color-bold;
@@ -16,6 +15,7 @@
   }
   &__link {
     transition: all 0.3s linear;
+    color: $color-light;
   }
 
   &_active {
