--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,4 +4,5 @@ $medium-f: 'Avenir-Medium';
 $color-bold: #212353;
 $color-light: #4B5D68;
 $color-white: #fff;
-$color-purple: #9C69E2;
+$color-purple: #9c69e2;
+$color-green: #68C9BA;
