--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -2,24 +2,62 @@
   display: flex;
   align-items: center;
   font-family: $medium-f;
+  @include mobile {
+    display: none;
+  }
+  &-active {
+    @include mobile {
+      display: block;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.7);
+      left: 0;
+      top: 0;
+      bottom: 0;
+      padding-top: 100px;
+      overflow: auto;
+      right: 0;
+      z-index: 20;
+      text-align: center;
+    }
+  }
+  
   &__item {
     font-size: 16px;
     margin-right: 40px;
     line-height: 26px;
     transition: all 0.3s linear;
-    &:hover {
-      .menu__link {
-        color: $color-bold;
+
+    @include mobile {
+      margin-right: 0;
+      font-size: 50px;
+      line-height: 100px;
+    }
+
+    @media (hover: hover) {
+      &:hover {
+        .menu__link {
+          color: $color-bold;
+        }
       }
     }
   }
   &__link {
     transition: all 0.3s linear;
     color: $color-light;
+
+    @include mobile {
+      color: $color-white;
+    }
   }
 
   &_active {
     font-weight: 800;
     color: $color-bold;
+
+    @include mobile {
+      color: $color-purple;
+    }
   }
 }
