--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -3,9 +3,10 @@
 }
 
 body {
-  background: $color-white;
+  background: linear-gradient(180deg, #F6FAFD 0%, #FFFFFF 19.4%);
   font-family: $main-f;
   position: relative;
+  overflow-x: hidden;
 }
 
 h1,h2,h3,h4,h5,h6,p {
@@ -14,6 +15,8 @@ h1,h2,h3,h4,h5,h6,p {
 
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 button {
