--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -14,8 +14,14 @@
     box-shadow: 0 5px 5px rgba(75, 93, 104, 0.1);
     transition: color 0.3s linear;
     font-size: 16px;
-    &:hover {
-      color: $color-purple;
+    @media (hover: hover) {
+      &:hover {
+        color: $color-purple;
+      }
+    }
+
+    @include mobile {
+      display: none;
     }
   }
 
@@ -26,9 +32,11 @@
     color: $color-white;
     border: 1px solid $color-purple;
     transition: all 0.3s linear;
-    &:hover {
-      color: $color-purple;
-      background: $color-white;
+    @media (hover: hover) {
+      &:hover {
+        color: $color-purple;
+        background: $color-white;
+      }
     }
   }
 
