--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,10 +2,18 @@
 
   &__page {
     padding-top: 50px;
+
+    @include mobile {
+      padding-top: 20px;
+    }
   }
 
   &__panel {
     display: flex;
+
+    @include mobile {
+      justify-content: space-between;
+    }
   }
 
   &__nav {
@@ -13,6 +21,51 @@
     flex: 1 1 auto;
     align-items: center;
     margin-left: 120px;
+
+    @include mobile {
+      display: flex;
+      margin-left: 0;
+      flex: 0 0 auto;
+    }
+  }
+
+  &__burger {
+    width: 30px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    position: relative;
+    z-index: 25;
+    display: none;
+    @include mobile {
+      display: flex;
+    }
+
+    span {
+      width: 100%;
+      height: 2px;
+      background: $color-purple;
+      border-radius: 10px;
+    }
+
+    &:after,&:before {
+      content: '';
+      background: $color-purple;
+      width: 100%;
+      height: 2px;
+      border-radius: 10px;
+    }
+  }
+
+  &__burger_active {
+    span {
+      background: $color-white;
+    }
+
+    &:after,&:before {
+      background: $color-white;
+    }
   }
 
   &__slider {
