--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import "fonts";
 @import "variables";
 @import "base";
+@import "mixins";
 @import "container";
 @import "overlay";
 @import "modal";
@@ -9,6 +10,7 @@
 @import "error";
 @import "header";
 @import "logo";
+@import "search";
 @import "menu";
 @import "btn";
 @import "slider";
