--- a/src/styles/logo.scss
+++ b/src/styles/logo.scss
@@ -2,6 +2,12 @@
   display: flex;
   align-items: center;
 
+  &__img {
+    @include mobile {
+      height: 20px;
+    }
+  }
+
   &__title {
     font-family: $bold-f;
     font-size: 20px;
