--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -3,15 +3,39 @@
     background: url("../../public/images/header/header-slider.png") no-repeat center center;
     background-size: cover;
     padding: 80px 104px;
+
+    @include mobile {
+      padding: 40px;
+    }
   }
   &__content {
     width: 60%;
+    @include mobile {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    @include tablet {
+      width: 90%;
+    }
   }
   &__title {
     font-family: $bold-f;
     font-size: 72px;
     line-height: 79px;
     color: $color-bold;
+    @include mobile {
+      line-height: 40px;
+      font-size: 36px;
+      text-align: center;
+    }
+
+    @include tablet {
+      font-size: 61px;
+      line-height: 65px;
+    }
   }
   &__description {
     font-family: $medium-f;
@@ -20,6 +44,12 @@
     line-height: 29px;
     color: $color-light;
     width: 70%;
+
+    @include mobile {
+      width: 100%;
+      font-size: 20px;
+      text-align: justify;
+    }
   }
 
   .slick-dots {
