--- a/src/styles/title.scss
+++ b/src/styles/title.scss
@@ -3,4 +3,9 @@
   line-height: 52px;
   color: $color-bold;
   font-family: $bold-f;
+
+  @include mobile {
+    text-align: left;
+    margin-bottom: 10px;
+  }
 }
